@startuml
class Site {
    int id;
    String libelle;
}
class Chaine {
    int id;
    String libelle;
}
class Machine {
  Integer numero
}
class Modele {
  int id
  String nom
}
class Releve {
  int id
  ZonedDateTime dateReleve
  Float conso
}
class ConsommationNormale {
  int id
  String description
  Float conso
}
class Type {
  int id
  String description
  String unite
}

Site "1" *-- "*" Chaine : contient
Chaine "1" *-- "*" Machine: contient
Machine "*" *-- "1" Modele: contient
Machine "1" *-- "*" Releve: contient
Releve "*" *-- "1" Type: contient
ConsommationNormale "*" *-- "1" Type: a un
Modele "1" *-- "*" ConsommationNormale: associé à
@enduml